fixed footer gap spacing

--- a/app/components/Forum/Forum.module.css
+++ b/app/components/Forum/Forum.module.css
@@ -90,12 +90,12 @@
       width: 100%;
       display: flex;
       align-self: flex-end;
-      align-items: center;
       height: 35px;
       position: absolute;
       bottom: 0;
       right: 0;
       left: 0;
+      gap: 0;
 
       button {
         border: none;
